# ml-tech-assessment

./: .dockerignore  .gitignore  Dockerfile  README.md  TECHNICAL_DECISIONS.md  pyproject.toml
app/: configurations.py  main.py  prompts.py
app/adapters/: in_memory_transcript_repository.py  openai.py
app/api/: routes.py
app/domain/: errors.py  models.py
app/ports/: __init__.py  llm.py  transcript_analysis_repository.py
app/services/: transcript.py
examples/: README.md  batch_request.json  batch_request_exceeds_limit.json  batch_request_with_empty_transcript.json  single_request.json  single_request_whitespace.json
tests/adapters/: test_in_memory_transcript_repository.py  test_openai.py
tests/api/: test_routes.py
tests/domain/: test_models.py
tests/services/: test_transcript.py
